# ecole-extension

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  environment.yaml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: environment.yaml  pyproject.toml
{{cookiecutter.python_package_name}}/: environment.yaml  pyproject.toml  setup.py
{{cookiecutter.python_package_name}}/src/{{cookiecutter.python_package_name}}/: __init__.py
{{cookiecutter.python_package_name}}/src/{{cookiecutter.python_package_name}}/{{cookiecutter.python_module_name}}/: CMakeLists.txt
{{cookiecutter.python_package_name}}/src/{{cookiecutter.python_package_name}}/{{cookiecutter.python_module_name}}/include/{{cookiecutter.cpp_namespace_name}}/: some-observation.hpp
{{cookiecutter.python_package_name}}/src/{{cookiecutter.python_package_name}}/{{cookiecutter.python_module_name}}/src/: bindings.cpp  some-observation.cpp
